# mm-esp32-halow

./: .component_hash  CHECKSUMS.json  CMakeLists.txt  Kconfig  idf_component.yml  mmhalow.c  mmhalow.h
components/: CMakeLists.txt
components/hostap/: CMakeLists.txt
components/mm-iot-sdk/: README.md  VERSION.md  documentation.html  platform.json  platform.py  platform_ststm32.py
components/mm-iot-sdk/applications/mm-ekh08-u575/m2m_agent/: Makefile  openocd.cfg  platform.mk  readme.md
components/mm-iot-sdk/applications/mm-ekh08-u575/m2m_controller/: Makefile  platform.mk  readme.md
components/mm-iot-sdk/boards/: mm-ekh08-h753.json  mm-ekh08-u575-sdio.json  mm-ekh08-u575.json  mm-ekh08-wb55-ble.json  mm-ekh08-wb55.json  mm-ekh18-wb55.json  mm-mm6108-ekh05-sdio.json  mm-mm6108-ekh05.json  mm-mm8108-ekh05-sdio.json  mm-mm8108-ekh05.json
components/mm-iot-sdk/builder/: main.py
components/mm-iot-sdk/builder/frameworks/: mm_iot.py  utils.py
components/mm-iot-sdk/examples/ap_mode/: config.hjson
components/mm-iot-sdk/examples/ap_mode/src/: ap_mode.c  mbedtls_config.h
components/mm-iot-sdk/examples/aws_iot/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/aws_iot/credentials/: AmazonRootCA.pem  certificate.pem.crt  otasigning.pem.crt  private.pem.key
components/mm-iot-sdk/examples/aws_iot/src/: aws_iot.c  aws_iot_config.h  core_mqtt_agent_config.h  mbedtls_config.h  version.h
components/mm-iot-sdk/examples/aws_iot/templates/: fleet_provisioning_policy.json  fleet_provisioning_template.json
components/mm-iot-sdk/examples/beacon_stuffing/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/beacon_stuffing/src/: beacon_stuffing.c
components/mm-iot-sdk/examples/bootloader/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/bootloader/src/: bootloader.c  mmosal_shim_bootloader.c
components/mm-iot-sdk/examples/cli/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/cli/src/: cli.c  mbedtls_config.h
components/mm-iot-sdk/examples/cplusplus_demo/: app.mk  config.hjson  platformio.ini
components/mm-iot-sdk/examples/cplusplus_demo/src/: cplusplus_demo.cpp  mbedtls_config.h
components/mm-iot-sdk/examples/dns_client/: config.hjson
components/mm-iot-sdk/examples/dns_client/src/: dns_client.c  mbedtls_config.h  mm_app_common.h
components/mm-iot-sdk/examples/dpp/: config.hjson
components/mm-iot-sdk/examples/dpp/src/: dpp.c
components/mm-iot-sdk/examples/emmet/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/emmet/src/: emmet.c
components/mm-iot-sdk/examples/fileio/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/fileio/src/: fileio.c
components/mm-iot-sdk/examples/http/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/iperf/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/mqttdemo/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/ping/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/porting_assistant/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/rf-test/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/scan/: config.hjson
components/mm-iot-sdk/examples/softap/: config.hjson
components/mm-iot-sdk/examples/sslclient/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/template/: config.hjson
components/mm-iot-sdk/examples/twt_setup/: config.hjson
components/mm-iot-sdk/examples/udp_broadcast/: config.hjson  platformio.ini
components/mm-iot-sdk/examples/wnm_sleep/: config.hjson  platformio.ini
components/mm-iot-sdk/framework/: Pipfile
components/mm-iot-sdk/framework/mk/: aws-common.mk  aws-defender.mk  aws-fleet-provisioning.mk  aws-jobs.mk  aws-ota.mk  aws-shadow.mk  aws-sigv4.mk  backoffAlgorithm.mk  core-arm-cortex-m33f.mk  core-arm-cortex-m4f.mk  core-arm-cortex-m7f.mk  coreJSON.mk  coreMQTT-Agent.mk  coreMQTT.mk  coreSNTP.mk  freertos-arm-cortex-m33f.mk  freertos-arm-cortex-m4f.mk  freertos-arm-cortex-m7f.mk  freertos-common.mk  freertoslibs-common.mk  freertosplustcp.mk  littlefs.mk  lwip.mk  mbedtls.mk  misc.mk  mmagic_agent.mk  mmagic_controller.mk  mmconfig.mk  mmipal.mk  mmiperf.mk  mmping.mk  mmpktmem.mk  mmregdb.mk  mmutils.mk  morsefirmware.mk  morselib.mk  mqtt-agent-task.mk  platform-mm-ekh08-h753.mk  platform-mm-ekh08-u575-sdio.mk  platform-mm-ekh08-u575.mk  (+13 more)
components/mm-iot-sdk/framework/morsefirmware/: README.md  REUSE.toml  bcf_aw_hm593.mbin  bcf_aw_hm593_4v3.mbin  bcf_mf03120.mbin  bcf_mf08251.mbin  bcf_mf08551.mbin  bcf_mf08651_us.mbin  mm6108.mbin  mm8108b2-rl.mbin
components/mm-iot-sdk/framework/morselib/: README.md  REUSE.toml
components/mmpktmem/: CMakeLists.txt  Kconfig
components/mmutils/: CMakeLists.txt
components/morselib/: CMakeLists.txt
components/regdb/: CMakeLists.txt  Kconfig
components/shims/: CMakeLists.txt  Kconfig  hostap_morse_common.h  mmhal_core.c  mmhal_os.c  mmhal_wlan.c  mmhal_wlan_binaries.c  mmosal_shim_freertos_esp32.c
components/shims/include/esp32c6/: mmport.h
components/shims/include/esp32s3/: mmport.h
examples/dual_if/: CMakeLists.txt  sdkconfig.defaults
examples/dual_if/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  halow.c  halow.h  idf_component.yml  server.c  server.h
examples/iperf/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/iperf/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
examples/porting_assistant/: CMakeLists.txt  sdkconfig.defaults
examples/porting_assistant/main/: CMakeLists.txt  chip_cfg.c  chip_cfg.h  config.h  log.h  porting_assistant.c  porting_assistant.h  sdio_spi.c  sdio_spi.h  test_os.c  test_wlan_fw_bcf.c  test_wlan_io.c
examples/scan/: CMakeLists.txt
examples/softap/: CMakeLists.txt  sdkconfig.defaults
examples/softap/main/: Kconfig.projbuild  app_main.c  idf_component.yml
examples/sta_connect/: CMakeLists.txt  sdkconfig.defaults
examples/sta_connect/main/: app_main.c
examples/sta_reboot/: CMakeLists.txt  sdkconfig.defaults
examples/sta_reboot/main/: CMakeLists.txt  app_main.c
(+2363 files in other folders)
